fix: :bug: fix image alignment

--- a/src/features/components/templates/options-content/styles.module.scss
+++ b/src/features/components/templates/options-content/styles.module.scss
@@ -17,6 +17,7 @@
     grid-template-columns: 1fr;
     gap: 1.6rem;
     max-inline-size: 100rem;
+    margin-inline: auto;
 
     @include breakpoints(phone) {
         gap: 2.4rem;
